--- a/redux-example/src/App.css
+++ b/redux-example/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  text-align: center;
+  
 }
 
 .App-logo {
@@ -12,6 +12,7 @@
   height: 150px;
   padding: 20px;
   color: white;
+  text-align: center;
 }
 
 .App-title {
@@ -20,6 +21,16 @@
 
 .App-intro {
   font-size: large;
+}
+
+.App-content {
+  width: 90%;
+  margin: auto;
+  color: #222;
+}
+
+.text-blue {
+  color: #61DAFB;
 }
 
 @keyframes App-logo-spin {
